public/stylesheets/screen_spotus.css
/* ... */
ol.create_a_tip_iconized li.pledgester, ol.create_a_pitch_iconized li.pledgester {
  background: url(/images/pledgester.png) no-repeat left top;
  padding: 0;
  margin: 30px 0 0 0;
  height: 33px;
  }
ol.create_a_tip_iconized li.pitcher, ol.create_a_pitch_iconized li.pitcher {
  background: url(/images/pitcher.png) no-repeat left top;
  height: 33px;
  padding: 0;
  margin: 30px 0 0 0;
  }
ol.create_a_pitch_iconized li.journalist {
  background: url(/images/journalist.png) no-repeat left top;
  height: 33px;
  padding: 0;
  margin: 20px 0 0 0;
  }
ol.create_a_pitch_steps li.journalist {
  color: #999999;
  margin: 30px 0 0 0;
  }
ol.create_a_tip_steps  li.tipster, ol.create_a_pitch_steps  li.tipster  {
  color: #666666;
  margin: 15px 0 0 0;
  }
ol.create_a_tip_steps li.pledgester {
  color: #999999;
  margin: 30px 0 0 0;
  }
ol.create_a_pitch_steps li.pledgester {
  color: #999999;
  margin: 45px 0 0 0;
  }
ol.create_a_tip_steps li.pitcher, ol.create_a_pitch_steps li.pitcher {
  color: #999999;
  margin: 30px 0 0 0;
  }
.take_action {
  float: right;
  width: 445px;
  padding: 10px 10px 10px 10px;
  margin: 0 0 0 10px;
  font-family: Georgia, serif, "Warnock Pro", "Goudy Old Style","Palatino","Book Antiqua";
  line-height: 17px;
  }
.take_action ul {
  margin: 0 0 0 10px;
  padding: 0;
  }
.take_action li {
  list-style: square;
  }
.create_a_tip_form .row  textarea, 
.create_a_job_form .row textarea, 
.create_a_sample_form .row textarea {
  width: 240px!important;
  }
.create_a_tip_form .free  textarea {
  width: 450px!important;
  }
.create_a_tip_form .row label, .create_a_pitch_form .row label, 
.create_a_job_form .row label, .create_a_sample_form .row label {
  float: left;
  width: 200px!important;
  margin: 0 10px 0 0;
  }
.create_a_tip_form .row textarea {
  float: left;
  margin: 0 0 10px 0;
  padding: 0;
  }
.create_a_tip_form .form_hint {
  margin: 0 0 0 210px;
  color: #999999;
  }
.create_a_pitch_form .form_hint {
  margin: 0 0 0 210px;
  }
.create_a_tip_form .media label {
  margin: 0 0 0 10px;
  width: 190px!important;
  }
.create_a_tip_form .free label {
  float: left;
  width: 420px;
  }
.create_a_pitch_form .delivered label {
  float:left;
  width: auto!important;
  }
.create_a_pitch_form .delivered input {
  float:left;
  width: auto!important;
  margin: 0 10px 0 0;
  }
.form_topic_box {  
  margin: 0 0 0 210px;
  }
.topic_box {
  float: left;
  width: 180px;
  position: relative;
  }
.topic_box label {
  top: 0;
  left: 25px;
  width: auto;
  position: absolute;
  }
.topic_box input {
  top: 0;
  left: 0;
  }
/* -----------------------------------------------------------------------------
 General Column specs part 1 - this the white background color plus the padding
--------------------------------------------------------------------------------  */
.box_white {
  padding: 10px;
  background: #fff;
  }
.box_yellow {
  padding: 10px;
  background: #FEFFD9;
  margin: 0 0 10px 0;
  }
.box_blue_info {
  padding: 5px 0 0 50px;
  border-bottom: 1px solid #c0c0c0;
  margin: 0 0 10px 0;
  background: url(/images/blue_info.png) no-repeat 10px 5px;
  }
.existing_tips_picthes {
  border-bottom: 1px solid #c0c0c0;
  }
/* ---------------------------------------------------------------------------------
 General Column specs part 2 - this achieves the float left and size for the columns
------------------------------------------------------------------------------------ */
.span-70, .span-205, .span-220, .span-235, .span-280, .span-340, .span-390, .span-455, .span-460, .span-575, .span-605, .span-715 {float:left;}
.span-70  {width: 70px;}
.span-205 {width: 205px;}
.span-220 {width: 220px;}
.span-235 {width: 235px;}
.span-280 {width: 280px;}
.span-340 {width: 340px;}
.span-390 {width: 390px;}
.span-455 {width: 455px;}
.span-460 {width: 460px;}
.span-575 {width: 575px;}
.span-605 {width: 605px;}
.span-715 {width: 715px;}
/* ---------------------------------------------------------------------------------
 General Column specs part 3 - this achieves the float right and size for the columns
------------------------------------------------------------------------------------ */
.span-145, .span-160, .span-225, .span-270, .span-530 {float: right;}
.span-145 {width:145px;}
.span-160 {width:160px;}
.span-225 {width:225px;}
.span-270 {width:270px;}
.span-530 {width:530px;}
/* ---------------------------------------------------------------------------------
 General Column specs part 4 - this achieves the gray areas for the columns 
 - needed because of support for ie6 and 7 with the spotus_ie_pixel.gif
------------------------------------------------------------------------------------ */
.summary h3 {margin: 0 0 4px 0;}
.button_news_items {
  margin: 0;
  padding: 0 0 0 45px;
  }
.summary.span-390 p.short_description {
  padding: 0px;
  margin: -10px 0 0 0;
  width: 350px;
  text-align: justify;
  }
p.short_description {
  padding: 0px;
  margin: -20px 0 5px 0;
  text-align: justify;
  }
.block-padding {
  height: 15px;
  }
.column_v {
  margin: 0 15px;
  }
.block-spacer {
  height: 15px;
  background: #f5f5f5;
  }
.block-spacer-transparent {
  height: 15px;
  }
.block-spacer-negative {
  height: 15px;
  background: #f5f5f5;
  margin: 10px -10px;
  }
.yellow-spacer-negative {
  height: 2px;
  background: url(/images/spotus_form_border.gif) repeat-x left top;
  clear: both;
  margin: 0px -10px 10px -10px;
  }
.yellow-spacer-negative-blank {
  height: 2px;
  clear: both;
  margin: 0px -10px 10px -10px;
  }
.ui-tabs-hide { display: none;}
  
.work_row {
  position: relative;
  }

/* Progress Bar Styling */  
div.progressBar {
  margin: 5px;
  }
div.progressBar div.border {
  background-color: #fff;
  border: 1px solid gray;
  width: 100%;
  }
div.progressBar div.background {
  background-color: red;
  height: 18px;
  width: 0%;
  }
div.progressBar img {
  margin: 5px;
  }

/* Tab Styling */
#tab_container {
  border-bottom: 1px solid #d5d5d5;
  width: 625px;
  margin: 20px 0 0 0;
  }
/* ... */

